--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.11.0",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "dotenv": "^8.2.0",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
     "chart.js": "^2.9.4",
+    "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.5",
     "material-ui-search-bar": "^1.0.0",
     "react": "^16.13.1",
@@ -21,7 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "turf": "^3.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
