working knockout text and progress scroll

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@turf/turf": "^5.1.6",
+    "aos": "^2.3.4",
     "chart.js": "^2.9.4",
     "date-fns": "^2.8.1",
     "dotenv": "^8.2.0",
